--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Real Estate Company Name</title>
+    <title>Sun Shine Solar </title>
     <!-- Link to our stylesheet -->
     <link rel="stylesheet" href="../src/styles/main.css">
     <!-- You can also add links to Google Fonts or Font Awesome icons here -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <!-- FONT AWESOME CDN LINK -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -18,7 +20,7 @@
     <header>
         <div class="top-bar">
             <div class="contact-info">
-                <span>akdreamcity@gmail.com</span> | <span>+532-3573345</span>
+                <span>sunshinesolar@gmail.com</span> | <span>+6306693936</span>
             </div>
             <div class="social-media">
                 <!-- We will add social media icons later -->
@@ -36,11 +38,9 @@
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Our Project Gallery</a></li>
                 <li><a href="#">Our Project Location</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Announcement</a></li>
-                <li><a href="#">Career</a></li>
                 <li><a href="#">Downloads</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
@@ -54,10 +54,10 @@
 
     <!-- Main Content of the Page -->
     <!-- ================== Hero Section ================== -->
-    <section class="hero">
+     <section class="hero">
         <div class="hero-content">
-            <img src="../src/assets/images/group-logo.png" alt="Group of Companies Logo" class="group-logo">
-            <ul class="company-list">
+            <!-- <img src="../src/assets/images/group-logo.png" alt="Group of Companies Logo" class="group-logo"> -->
+            <!-- <ul class="company-list">
                 <li>A K INFRADREAM LTD.</li>
                 <li>A K MEGA ELECTRONICS LTD.</li>
                 <li>A K DREAMCITY PVT. LTD.</li>
@@ -65,7 +65,7 @@
                 <li>A K DEEP NIDHI PVT. LTD.</li>
                 <li>A K MEGA ENTERTAINMENT P</li>
                 <li>A K CHARITABLE SOCIETY</li>
-            </ul>
+            </ul> -->
         </div>
     </section>
     <!-- ================== About Us Section ================== -->
@@ -84,13 +84,11 @@
             <div class="about-content">
                 <h2 class="section-title">About Us</h2>
                 <p>
-                    Established in 2018, A.K. INFRADREAM LIMITED is a top real estate company dedicated to improving
-                    living standards. Based in Prayagraj, we’re on a mission to transform rural areas with beautiful
-                    residential and commercial plots in Uttar Pradesh, Bihar and Madhya Pradesh.
+                   Sunshine solar solutions is a leading renewable energy company in India. We provide system integration support for turn-key projects. We assist in building customised systems from multiple sources which have been garnered from our expertise. As our firm name suggests, our priority relies in providing alternate power solutions at affordable prices.
                 </p>
                 <p>
-                    We're proud to serve as a major real estate company offering a wide range of plots to suit your
-                    needs. Whether you're looking for residential or commercial plots, A.K. Infra Dream has you covered.
+                   * On-time at services<br>
+                   * Verified professionals
                 </p>
                 <a href="#" class="btn btn-read-more">Learn More</a>
             </div>
@@ -104,9 +102,9 @@
             <div class="priority-content">
                 <h2 class="section-title">WE ALWAYS PROVIDE PRIORITY TO OUR CUSTOMER</h2>
                 <p>
-                    The reason why A. K. INFRADREAM LIMITED has been able to achieve such steep success in a short
+                    The reason why SUN SHINE SOLAR has been able to achieve such steep success in a short
                     period of time is due to our diligence toward ensuring customer satisfaction in every way possible.
-                    Right from the selection of land for our projects to our vast and growing network, we always ensure
+                    Right from the selection of solar for our projects to our vast and growing network, we always ensure
                     that the process is transparent and customer friendly.
                 </p>
             </div>
@@ -114,24 +112,24 @@
             <!-- Right Column: Features List -->
             <div class="priority-features">
                 <div class="feature-item">
-                    <div class="feature-icon">[ICON]</div>
+                    <div class="feature-icon"><i class="fa-solid fa-indian-rupee-sign"></i></div>
                     <div class="feature-text">
                         <h3>Low Cost</h3>
-                        <p>Designing, developing, managing and real estate properties.</p>
+                        <p>Designing, developing and managing solar properties at affordable prices.</p>
                     </div>
                 </div>
                 <div class="feature-item">
-                    <div class="feature-icon">[ICON]</div>
+                    <div class="feature-icon"><i class="fa-solid fa-store"></i></div>
                     <div class="feature-text">
                         <h3>Good Marketing</h3>
-                        <p>Preparing studies and providing consultations regarding land purchase and sales.</p>
+                        <p>Preparing studies and providing consultations regarding solar uses and sales.</p>
                     </div>
                 </div>
                 <div class="feature-item">
-                    <div class="feature-icon">[ICON]</div>
+                    <div class="feature-icon"><i class="fa-solid fa-handshake"></i></div>
                     <div class="feature-text">
                         <h3>Reliable</h3>
-                        <p>To be an optimum business template for the Real Estate Industry.</p>
+                        <p>To be an optimum business template for the solar Industry.</p>
                     </div>
                 </div>
             </div>
@@ -144,15 +142,16 @@
             <div class="value-card why-choose-us">
                 <h3>Why Choose Us</h3>
                 <p>
-                    A. K. INFRADREAM LIMITED. We use a combination of both online and offline marketing to ensure that
-                    we reach out to the maximum amount of customers.
+                    SUN SHINE SOLAR. We use a combination of both online and offline marketing to ensure that
+                    we reach out to the maximum amount of customers and provide them best services.
                 </p>
                 <a href="#" class="btn-learn-more">Learn More</a>
             </div>
 
             <!-- Card 2: Our Vision -->
             <div class="value-card">
-                <div class="value-icon">[ICON]</div>
+                <div class="value-icon"><i class="fa-solid fa-eye"></i> </div>
+               
                 <h3>Our Vision</h3>
                 <p>
                     To change the industry of conventional real estate development, championing excellence—in
@@ -163,7 +162,7 @@
 
             <!-- Card 3: Our Mission -->
             <div class="value-card">
-                <div class="value-icon">[ICON]</div>
+                <div class="value-icon"><i class="fa-solid fa-bullseye"></i></div>
                 <h3>Our Mission</h3>
                 <p>
                     We Mission to offer added value to our customers by providing a "whole of life" client support
@@ -174,7 +173,7 @@
 
             <!-- Card 4: Our Strategy -->
             <div class="value-card">
-                <div class="value-icon">[ICON]</div>
+                <div class="value-icon"><i class="fa-solid fa-people-group"></i></div>
                 <h3>Our Strategy</h3>
                 <p>
                     We believe successful real estate is about people: where they live; how they get to work; what they
@@ -190,12 +189,9 @@
         <div class="announcement-container">
             <!-- Left Column: Announcement -->
             <div class="announcement-box">
-                <h3>Announcement [A. K. Infradream]</h3>
+                <h3>Announcement [Sun Shine Solar]</h3>
                 <p>
-                    We are thrilled to announce that A. K. InfraDream Limited has been honored with the prestigious
-                    Global Fame Awards 2023 for the Most Trusted Real Estate Developer. This is a remarkable achievement
-                    for our company and a testament to our commitment to excellence, innovation, and customer
-                    satisfaction.
+                   Sunshine Solar Solutions is one of the finest Leading Renewable Energy Company dealing with all eco-friendly products, helping the environment to stay Clean and Green.
                 </p>
                 <p>
                     The Global Fame Awards are recognized as one of the most coveted awards in the industry, and winning
@@ -230,8 +226,8 @@
         <div class="team-container">
             <!-- Team Member Card 1 -->
             <div class="team-card">
-                <img src="../src/assets/images/team-himanshu.jpg" alt="Mr. Himanshu Kushwaha">
-                <h3>MR. HIMANSHU KUSHWAHA</h3>
+                <img src="../src/assets/images/team-abhishek.jpg" i="Mr. Abhishek Maurya">
+                <h3>MR. ABHISHEK MAURYA</h3>
                 <p>Managing Director</p>
                 <div class="team-socials">
                     <a href="#">T</a> <a href="#">F</a> <a href="#">I</a> <a href="#">Y</a>
@@ -254,31 +250,31 @@
         <div class="stats-container">
             <!-- Stat Item 1 -->
             <div class="stat-card">
-                <div class="stat-icon">[ICON]</div>
+                <div class="stat-icon"><i class="fa-regular fa-user"></i></div>
                 <span class="stat-number">5000</span>
                 <p class="stat-label">Our Customer +</p>
             </div>
 
             <!-- Stat Item 2 -->
             <div class="stat-card">
-                <div class="stat-icon">[ICON]</div>
+                <div class="stat-icon"><i class="fa-solid fa-warehouse"></i></div>
                 <span class="stat-number">5</span>
                 <p class="stat-label">Our Branch +</p>
             </div>
 
             <!-- Stat Item 3 -->
             <div class="stat-card">
-                <div class="stat-icon">[ICON]</div>
+                <div class="stat-icon"><i class="fa-solid fa-people-roof"></i></div>
                 <span class="stat-number">20</span>
                 <p class="stat-label">Our Agent +</p>
             </div>
 
             <!-- Stat Item 4 -->
-            <div class="stat-card">
+            <!-- <div class="stat-card">
                 <div class="stat-icon">[ICON]</div>
                 <span class="stat-number">3</span>
                 <p class="stat-label">Our Awards +</p>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- ================== Amenities Section ================== -->
@@ -291,44 +287,44 @@
         <div class="amenities-grid">
             <!-- Amenity 1 -->
             <div class="amenity-card">
-                <div class="amenity-icon">[ICON]</div>
-                <h4>Entrance Gate</h4>
+                <div class="amenity-icon"><i class="fa-solid fa-school"></i></div>
+                <h4>School</h4>
             </div>
             <!-- Amenity 2 -->
             <div class="amenity-card">
-                <div class="amenity-icon">[ICON]</div>
-                <h4>Latest Interior Design</h4>
+                <div class="amenity-icon"><i class="fa-solid fa-cart-shopping"></i></div>
+                <h4>Shopping Mall</h4>
             </div>
             <!-- Amenity 3 -->
             <div class="amenity-card">
-                <div class="amenity-icon">[ICON]</div>
-                <h4>Electricity</h4>
+                <div class="amenity-icon"><i class="fa-solid fa-house"></i></div>
+                <h4>Houses</h4>
             </div>
             <!-- Amenity 4 -->
             <div class="amenity-card">
-                <div class="amenity-icon">[ICON]</div>
-                <h4>Garden Park</h4>
+                <div class="amenity-icon"><i class="fa-solid fa-road"></i></div>
+                <h4>Street</h4>
             </div>
             <!-- Amenity 5 -->
             <div class="amenity-card">
                 <div class="amenity-icon">[ICON]</div>
-                <h4>Fully Furnished</h4>
+                <h4>Complexes</h4>
             </div>
             <!-- Amenity 6 -->
             <div class="amenity-card">
                 <div class="amenity-icon">[ICON]</div>
-                <h4>School</h4>
+                <h4>Government Project</h4>
             </div>
             <!-- Amenity 7 -->
-            <div class="amenity-card">
+            <!-- <div class="amenity-card">
                 <div class="amenity-icon">[ICON]</div>
                 <h4>Street Light</h4>
-            </div>
+            </div> -->
             <!-- Amenity 8 -->
-            <div class="amenity-card">
+            <!-- <div class="amenity-card">
                 <div class="amenity-icon">[ICON]</div>
                 <h4>Water Foundation</h4>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -357,8 +353,8 @@
                     <h4>Mr. Suresh</h4>
                 </div>
                 <p class="testimonial-quote">
-                    Success is actually a short race - a sprint fueled by discipline just long enough for habit to kick
-                    in and take over.
+                   "From the initial consultation to the final installation, the staff was extremely helpful and professional.
+                    They explained everything clearly and answered all our questions without a high-pressure sales pitch".
                 </p>
             </div>
         </div>
@@ -370,17 +366,18 @@
             <div class="footer-column about-column">
                 <h3>Corporate Office:</h3>
                 <p>
-                    A. K. Infradream Limited's Corporate Identification Number is (CIN) U70109UP2018PLC106174 and its
+                    Sun Shine Solar Corporate Identification Number is (CIN) U70109UP2018PLC106174 and its
                     registration number is 106174.
                 </p>
-                <p><strong>Address:</strong> 22-F 1st Floor, Jawaharlal Nehru Road, Tagore Town, Prayagraj, U.P., India.
-                    211002.</p>
+                <p><strong>Address:</strong> Sant Nagar Colony , Chitaipur , U.P., India.
+                    211002 </p>
 
                 <h3>Reg Office:</h3>
-                <p><strong>Address:</strong> BADA CHAKA, NAINI, Prayagraj, U.P., India. 211008.</p>
+                <p><strong>Address:</strong>Sant Nagar Colony , Chitaipur , U.P., India.
+                    211002 </p>
 
-                <p><strong>Email:</strong> akdreamcity@gmail.com</p>
-                <p><strong>Call:</strong> +91 708 122 8384, +91 941 522 8517</p>
+                <p><strong>Email:</strong> sunshinesolar@gmail.com</p>
+                <p><strong>Call:</strong> +91 6306693936 </p>
             </div>
 
             <div class="footer-column links-column">
@@ -412,7 +409,7 @@
 
         <div class="footer-sub">
             <div class="copyright">
-                <p>2018 @ A. K. Infradream Limited.</p>
+                <p>2024 @ SUN SHINE SOLAR</p>
             </div>
             <div class="footer-socials">
                 <a href="#">T</a> <a href="#">F</a> <a href="#">W</a> <a href="#">G</a> <a href="#">I</a> <a
@@ -457,6 +454,19 @@
 
     <!-- Link to our JavaScript file -->
     <script src="../src/js/main.js"></script>
+    <script>
+    const header = document.getElementById('main-header');
+
+    window.addEventListener('scroll', () => {
+        // If user scrolls more than 50 pixels down, add the 'scrolled' class
+        if (window.scrollY > 50) {
+            header.classList.add('scrolled');
+        } else {
+            // Otherwise, remove it
+            header.classList.remove('scrolled');
+        }
+    });
+</script>
 </body>
 
 </html>
