--- a/client/public/login.html
+++ b/client/public/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Associate Login - A.K. Infradream</title>
+    <title>Customer Login -Sun Shine Solar</title>
     <link rel="stylesheet" href="../src/styles/auth.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -11,9 +11,9 @@
     <div class="auth-container">
         <div class="auth-card">
             <a href="index.html" class="auth-logo-link">
-                <img src="../src/assets/images/logo.png" alt="A.K. Infradream Logo" class="auth-logo">
+                <img src="../src/assets/images/logo.png" alt="Sun Shine Solar" class="auth-logo">
             </a>
-            <h2>Associate Login</h2>
+            <h2>Customer Login</h2>
             <p class="auth-subtitle">Login with your username and password below.</p>
             
             <form action="./dashboard.html">
