--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,9 +36,9 @@
                 <img src="../src/assets/images/logo.png" alt="Company Logo">
             </div>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Our Project Location</a></li>
+                <li><a href="./locations.html">Our Project Location</a></li>
                 <li><a href="./gallery.html">Gallery</a></li>
                 <li><a href="./announcements.html">Announcement</a></li>
                 <li><a href="#">Downloads</a></li>
@@ -389,16 +389,16 @@
             <div class="footer-column links-column">
                 <h3>Useful Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="./index.html">Home</a></li>
                     <li><a href="#">Overview</a></li>
                     <li><a href="#">Our Aim</a></li>
                     <li><a href="#">Document</a></li>
                     <li><a href="#">Our Project</a></li>
-                    <li><a href="#">Media Gallery</a></li>
+                    <li><a href="./gallery.html">Media Gallery</a></li>
                     <li><a href="#">Download</a></li>
                     <li><a href="#">Privacy Policy</a></li>
                     <li><a href="#">News</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
 
